--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,6 +16,7 @@ jobs:
       with:
         node-version: 18
         cache: 'npm'
+    - run: npm install
     - run: npm run build
     - name: Make artifact from build
       uses: actions/upload-artifact@v3
