--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,12 +18,8 @@ jobs:
         cache: 'npm'
     - run: npm install
     - run: npm run build
-    - name: Make artifact from build
-      uses: actions/upload-artifact@v3
-      with:
-        name: github-pages
-        path: build
     - name: Deploy
-      uses: JamesIves/github-pages-deploy-action@v4
+      uses: peaceiris/actions-gh-pages@v3
       with:
-        folder: build
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./build
